Added performers section.

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <meta
       name="description"
       content="TEDxHITKolkata aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds roll 'OUT OF THE BOX'."
-    />
+      />
     <meta name="authors" content="Alfarhan Zahedi, Jatin Pandey" />
     <meta property="og:title" content="TEDxHITKolkata"/>
     <meta property="og:type" content="website"/>
     <meta
       property="description"
       content="TEDxHITKolkata aims to break the stereotype of conventional thinking and hence, inculcates the idea of rational thinking were the minds roll 'OUT OF THE BOX'."
-    />
+      />
     <meta property="og:image" content="https://tedxhitkolkata.com/img/fb.jpg"/>
     <meta property="og:image:secure_url" content="https://tedxhitkolkata.com/img/fb.jpg"/>
     <meta property="og:url" content="https://tedxhitkolkata.com/"/>
@@ -26,28 +26,27 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
       integrity="sha384-PmY9l28YgO4JwMKbTvgaS7XNZJ30MK9FAZjjzXtlqyZCqBY6X6bXIkM++IkyinN+"
       crossorigin="anonymous"
-    />
+      />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
       integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
       crossorigin="anonymous"
-    />
+      />
     <link
       rel="stylesheet"
       type="text/css"
       media="screen"
       href="css/style.css"
-    />
+      />
     <link rel="stylesheet" type="text/css" media="screen" href="css/base.css" />
     <link
       rel="stylesheet"
       type="text/css"
       media="screen"
       href="css/fonts.css"
-    />
+      />
   </head>
-
   <body>
     <div id="landing-overlay">
       <img
@@ -55,7 +54,7 @@
         src="img/logo.webp"
         class="img-responsive"
         alt="TEDx HIT Kolkata's logo."
-      />
+        />
       <div id="countdown-timer">
         <div class="countdown-timer-block">
           <div id="countdown-timer-days">73</div>
@@ -85,21 +84,21 @@
           target="_blank"
           aria-label="Follow us on Facebook."
           ><i class="fab fa-facebook"></i
-        ></a>
+          ></a>
         <a
           rel="noreferrer noopener"
           href="https://twitter.com/hitkolkata"
           target="_blank"
           aria-label="Follow us on Twitter."
           ><i class="fab fa-twitter"></i
-        ></a>
+          ></a>
         <a
           rel="noreferrer noopener"
           href="https://instagram.com/tedx_hitkolkata/"
           target="_blank"
           aria-label="Follow us on Instagram."
           ><i class="fab fa-instagram" aria-hidden="true"></i
-        ></a>
+          ></a>
       </div>
       <button id="explore-button" class="btn">EXPLORE</button>
     </div>
@@ -122,7 +121,7 @@
           style="border:0"
           title="Location of Heritage Institute of Technology, Kolkata."
           allowfullscreen
-        ></iframe>
+          ></iframe>
         <!--
           <nav class="navbar navbar-inverse navbar-sticky">
               <div class="container-fluid">
@@ -143,7 +142,7 @@
                   </div>
               </div>
           </nav>
-        -->
+          -->
         <div id="container-speaker" class="container">
           <h1 class="font__oswald sub-heading">SPEAKERS</h1>
           <hr class="small-hr" />
@@ -160,13 +159,13 @@
                     <img
                       src="img/speakers/1.webp"
                       alt="Sanjiv Mehta's portrait."
-                    />
+                      />
                   </div>
                   <h2>
                     Sanjiv Mehta<br /><span
                       >Country Manager, HP <br />
-                      Education, Healthcare & Startup's</span
-                    >
+                    Education, Healthcare & Startup's</span
+                      >
                   </h2>
                   <hr />
                   <p>
@@ -177,7 +176,6 @@
                 </div>
               </div>
             </div>
-
             <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
               <div class="card" data-toggle="modal" data-target="#modal-two">
                 <div class="box">
@@ -185,13 +183,13 @@
                     <img
                       src="img/speakers/2.webp"
                       alt="Madiha Ahmed's portrait."
-                    />
+                      />
                   </div>
                   <h2>
                     Madiha Ahmed<br /><span
                       >Youth Mentor at OpenHearts<br />TeachSDGs
-                      Ambassador</span
-                    >
+                    Ambassador</span
+                      >
                   </h2>
                   <hr />
                   <p>
@@ -219,7 +217,7 @@
                         </li>
                       </ul>
                     </span>
-                  -->
+                    -->
                 </div>
               </div>
             </div>
@@ -230,7 +228,7 @@
                     <img
                       src="img/speakers/3.webp"
                       alt="Aaquib Hussain's portrait."
-                    />
+                      />
                   </div>
                   <h2>
                     Aaquib Hussain<br /><span
@@ -253,11 +251,11 @@
                     <img
                       src="img/speakers/4.webp"
                       alt="Smriti Dewan's portrait."
-                    />
+                      />
                   </div>
                   <h2>
                     Smriti Dewan<br /><span
-                    >Writer, Director and Producer <br />of 101 India
+                      >Writer, Director and Producer <br />of 101 India
                     </span>
                   </h2>
                   <hr />
@@ -271,17 +269,45 @@
             </div>
           </div>
         </div>
-
+        <div class="container no-padding" style="margin-top: 50px;">
+          <h1 class="font__oswald sub-heading">Performers</h1>
+          <hr class="small-hr" />
+          <p>Meet the Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <hr class="small-hr" />
+          <br />
+          <div id="container-performer">
+            <div class="col-lg-3 col-md-6 col-sm-6 container-performer-member">
+              <div class=" float-my-children">
+                <img src="img/performers/1.jpg" alt="Ghungroo" />
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 container-performer-member">
+              <div class=" float-my-children">
+                <img src="img/performers/2.jpg" alt="Pravasana" />
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 container-performer-member">
+              <div class=" float-my-children">
+                <img src="img/performers/3.jpg" alt="Anubhav" />
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 container-performer-member">
+              <div class=" float-my-children">
+                <img src="img/performers/4.jpg" alt="Resonance" />
+              </div>
+            </div>
+          </div>
+        </div>
         <figure class="no-padding no-margin">
           <img
             src="img/banner.webp"
             class="banner"
             alt="TEDx HIT Kolkata's event banner."
-          />
+            />
           <figcaption>
             <small style="color:#ffffff;"
               >linkedin.com/in/ayushagarwal28/</small
-            >
+              >
           </figcaption>
         </figure>
         <div class="container no-padding" style="margin-top: 50px;">
@@ -290,12 +316,12 @@
           <p>Meet the people who brought it all together.</p>
           <hr class="small-hr" />
           <br />
-          <div id="container-team"></div>  
+          <div id="container-team"></div>
         </div>
         <div class="container font__open-sans no-padding">
-            <hr class="small-hr" />
-            <p>You can find the complete team <a href="team/index.html" target="_blank" aria-label="Team members list."><u>here</u></a>.</p>
-            <hr class="small-hr" />
+          <hr class="small-hr" />
+          <p>You can find the complete team <a href="team/index.html" target="_blank" aria-label="Team members list."><u>here</u></a>.</p>
+          <hr class="small-hr" />
         </div>
         <!--
           <div class="container">
@@ -344,7 +370,7 @@
                   <br/><br/>
               </div>
           </div>
-        -->
+          -->
       </div>
       <footer>
         <hr />
@@ -357,10 +383,10 @@
                   href="https://facebook.com/sharer/sharer.php"
                   aria-label="Share this website on Facebook."
                   ><i class="fab fa-facebook-f"></i
-                ></a>
+                  ></a>
                 <a href="" aria-label="Share this website on Twitter."
                   ><i class="fab fa-twitter"></i
-                ></a>
+                  ></a>
               </p>
             </div>
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
@@ -372,21 +398,21 @@
                   target="_blank"
                   aria-label="Follow us on Facebook."
                   ><i class="fab fa-facebook"></i
-                ></a>
+                  ></a>
                 <a
                   rel="noreferrer noopener"
                   href="https://twitter.com/hitkolkata"
                   target="_blank"
                   aria-label="Follow us on Twitter."
                   ><i class="fab fa-twitter"></i
-                ></a>
+                  ></a>
                 <a
                   rel="noreferrer noopener"
                   href="https://instagram.com/tedx_hitkolkata/"
                   target="_blank"
                   aria-label="Follow us on Instagram."
                   ><i class="fab fa-instagram" aria-hidden="true"></i
-                ></a>
+                  ></a>
               </p>
             </div>
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
@@ -395,9 +421,8 @@
           </div>
           <hr
             style="margin-top: 12px; border-width: 2px; border-color: red; margin-right: 80%;"
-          />
+            />
         </div>
-
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
@@ -413,12 +438,12 @@
               <p>
                 <span class="font-bolder"
                   ><a
-                    rel="noreferrer noopener"
-                    href="http://heritageit.edu"
-                    target="_blank"
-                    >Heritage Institute of Technology</a
+                  rel="noreferrer noopener"
+                  href="http://heritageit.edu"
+                  target="_blank"
+                  >Heritage Institute of Technology</a
                   ></span
-                ><br />
+                  ><br />
                 Chowbaga Road, Anandapur,<br />
                 PO: East Kolkata Twp, Kolkata - 700107
               </p>
@@ -426,7 +451,7 @@
           </div>
           <hr
             style="border-width: 2px; border-color: red; margin-right: 80%;"
-          />
+            />
         </div>
         <div class="container">
           <div class="row">
@@ -446,7 +471,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">
-                &times;
+              &times;
               </button>
               <img src="img/speakers/1.webp" alt="Sanjiv Mehta's portrait." />
               <div class="modal-title font-bolder">
@@ -468,11 +493,11 @@
                 His favourite quote: <br /><br />
                 <q
                   ><i
-                    >Start by doing what’s necessary; <br />
-                    Then do what’s possible; <br />
-                    And suddenly you’re doing the impossible.</i
+                  >Start by doing what’s necessary; <br />
+                Then do what’s possible; <br />
+                And suddenly you’re doing the impossible.</i
                   ></q
-                >
+                  >
               </p>
             </div>
           </div>
@@ -483,7 +508,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">
-                &times;
+              &times;
               </button>
               <img src="img/speakers/2.webp" alt="Madiha Ahmed's portrait." />
               <div class="modal-title font-bolder">
@@ -520,7 +545,7 @@
                   href="http://www.madiha.org"
                   target="_blank"
                   ><u>www.madiha.org</u></a
-                >.
+                  >.
               </p>
             </div>
           </div>
@@ -531,7 +556,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal">
-                &times;
+              &times;
               </button>
               <img src="img/speakers/3.webp" alt="Aaquib Hussain's portrait." />
               <div class="modal-title font-bolder">
@@ -552,7 +577,7 @@
                 He's a computer science graduate from Techno India group,
                 Research Internship from
                 <b>Jadavpur University, Kolkata and IIT Kharagpur</b
-                >.<br /><br />An entrepreneur for a mere 1.5 years, he has been
+                  >.<br /><br />An entrepreneur for a mere 1.5 years, he has been
                 able to build a business valued at <b>16.13 million USD</b>. He
                 is the Founder and Creative Head at i&We, leading a team of 24
                 motivated young professionals, catering to a business spreading
@@ -569,21 +594,18 @@
         </div>
       </div>
     </div>
-
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"
-    ></script>
+      ></script>
     <script
       src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"
       integrity="sha384-vhJnz1OVIdLktyixHY4Uk3OHEwdQqPppqYR8+5mjsauETgLOcEynD9oPHhhz18Nw"
       crossorigin="anonymous"
-    ></script>
+      ></script>
     <script src="js/countdown.js"></script>
     <script src="js/script.js"></script>
-    <script>
-        
-    </script>
+    <script></script>
   </body>
 </html>
