--- a/index.html
+++ b/index.html
@@ -563,6 +563,31 @@
           </div>
         </div>
       </div>
+      <div class="modal fade" id="modal-four" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">
+              &times;
+              </button>
+              <img src="img/speakers/4.webp" alt="Smriti Dewan's portrait." />
+              <div class="modal-title font-bolder">
+                <h3 class="font-bolder">Smriti Dewan</h3>
+                Writer, Director and Producer <br />of 101 India
+              </div>
+            </div>
+            <div class="modal-body">
+              <p>
+                Smriti Dewan is a writer, director, and host who started her career with Red Chillies Entertainment.<br/><br/>
+                Her writing expedition not only brought her laurels but has taken her to a level about which, every person with the art dreams.<br/><br/>
+      
+                She went ahead to work on Kaun Banega Crorepati and started her writing career with historical shows like Ashoka for Colours and the very famous Lajwanti for ZEE TV. She's also the writer/producer/director of <b>YouTube channel 101 India</b>.<br/><br/>
+                Currently, she travels the country looking for fascinating stories that she features in her short films.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <link
       rel="stylesheet"
