added remaining team members

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           </div>
         </div>
         <div class="container no-padding" style="margin-top: 50px;">
-          <h1 class="font__oswald sub-heading">Performers</h1>
+          <h1 class="font__oswald sub-heading">PERFORMERS</h1>
           <hr class="small-hr" />
           <p>Meet the Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           <hr class="small-hr" />
