added sub title to performers section, fixed mobile display of extra team members

--- a/about.html
+++ b/about.html
@@ -48,7 +48,20 @@
                   <br/>
                   <div class="row">
                       <div class="col-lg-8 col-lg-offset-2 col-md-12 col-sm-12 col-xs-12 text-center">
-                          <h1>About TED</h1>
+                          <h1>About TEDxHITKolkata</h1><hr/>
+                          <p>
+                              Have you ever taken a leap of faith,gone out of the comfort zone and done something extremely mind boggling? <br/>
+
+                              18th January 2019 will hold the event of TEDX at our very own esteemed  institution.<br/>
+                              For the first time ever in the history of Heritage Institute  of Technology, Kolkata,a group of 9 celebrated intellect, from all over India, along with 4 clubs of HITK will come together at one stage and give us the exposure to the mamoth world that is yet to unravel infront of us through their very own captivating life experiences.<br/><br/>
+                              Presenting with the theme OUT OF THE BOX TEDXHITKOLKATA, is an enriching knowledge extravaganza!
+                          </p>
+                      </div>
+                  </div>
+                  <br/><br/><br/>
+                  <div class="row">
+                      <div class="col-lg-8 col-lg-offset-2 col-md-12 col-sm-12 col-xs-12 text-center">
+                          <h1>About TED</h1><hr/>
                           <p>
                               TED is a nonprofit organization devoted to Ideas Worth Spreading. Started as a four-day
                               conference in California 30 years ago, TED has grown to support its mission with multiple
@@ -71,8 +84,7 @@
                   <div class="row">
                       <div class="col-lg-8 col-lg-offset-2 col-md-12 col-sm-12 col-xs-12 text-center">
                           <h1 class="no-margin">About TEDx</h1>
-                          <small style="display: inline-block; padding-bottom: 12px;">x = independently organized TED event</small>
-                          <br/>
+                          <small style="display: inline-block; padding-bottom: 12px;">x = independently organized TED event</small><hr/>
                           <p>
                               In the spirit of ideas worth spreading, TEDx is a program of local, self-organized
                               events that bring people topgether to share a TED-like experience. At a TEDx event, TED Talks video and live
