--- a/index.html
+++ b/index.html
@@ -244,10 +244,10 @@
             </div>
           </div>
         </div>
-        <div class="container no-padding" style="margin-top: 50px;">
+        <div class="container no-padding" style="margin-top: 0px;">
           <h1 class="font__oswald sub-heading">PERFORMERS</h1>
           <hr class="small-hr" />
-          <p>Meet the Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <p>Don't wait for inspiration, they present it live!</p>
           <hr class="small-hr" />
           <br />
           <div id="container-performer">
