added theme-color meta tag

--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
     />
     <meta name="authors" content="Alfarhan Zahedi, Jatin Pandey" />
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <meta name="theme-color" content="#000000">
+    <meta name="msapplication-navbutton-color" content="#000000">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#000000">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
