--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <meta property="og:image:secure_url" content="https://tedxhitkolkata.com/img/fb.jpg"/>
     <meta property="og:url" content="https://tedxhitkolkata.com/"/>
     <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <meta name="theme-color" content="#000000">
+    <meta name="msapplication-navbutton-color" content="#000000">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#000000">
   </head>
   <body>
     <div id="landing-overlay">
