removed sub-haeding class from h1

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     <div class="font__open-sans">
           <div class="container">
                   <br/><br/>
-                  <h1 class="font__oswald sub-heading text-center">ABOUT</h1>
+                  <h1 class="font__oswald text-center">ABOUT</h1>
                   <hr class="small-hr" />
                   <br/>
                   <div class="row">
