Fixed iPhone webp problem.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="landing-overlay">
       <img
         id="landing-overlay-logo"
-        src="img/logo.webp"
+        src="img/logo.jpg"
         class="img-responsive"
         alt="TEDx HIT Kolkata's logo."
         />
@@ -135,7 +135,7 @@
                 <div class="box">
                   <div class="img">
                     <img
-                      src="img/speakers/1.webp"
+                      src="img/speakers/1.jpg"
                       alt="Sanjiv Mehta's portrait."
                       />
                   </div>
@@ -159,7 +159,7 @@
                 <div class="box">
                   <div class="img">
                     <img
-                      src="img/speakers/2.webp"
+                      src="img/speakers/2.jpg"
                       alt="Madiha Ahmed's portrait."
                       />
                   </div>
@@ -204,7 +204,7 @@
                 <div class="box">
                   <div class="img">
                     <img
-                      src="img/speakers/3.webp"
+                      src="img/speakers/3.jpg"
                       alt="Aaquib Hussain's portrait."
                       />
                   </div>
@@ -227,7 +227,7 @@
                 <div class="box">
                   <div class="img">
                     <img
-                      src="img/speakers/4.webp"
+                      src="img/speakers/4.jpg"
                       alt="Smriti Dewan's portrait."
                       />
                   </div>
@@ -278,7 +278,7 @@
         </div>
         <figure class="no-padding no-margin">
           <img
-            src="img/banner.webp"
+            src="img/banner.jpg"
             class="banner"
             alt="TEDx HIT Kolkata's event banner."
             />
@@ -406,7 +406,7 @@
               <button type="button" class="close" data-dismiss="modal">
               &times;
               </button>
-              <img src="img/speakers/1.webp" alt="Sanjiv Mehta's portrait." />
+              <img src="img/speakers/1.jpg" alt="Sanjiv Mehta's portrait." />
               <div class="modal-title font-bolder">
                 <h3 class="font-bolder">Sanjiv Mehta</h3>
                 Country Manager, HP <br />
@@ -443,7 +443,7 @@
               <button type="button" class="close" data-dismiss="modal">
               &times;
               </button>
-              <img src="img/speakers/2.webp" alt="Madiha Ahmed's portrait." />
+              <img src="img/speakers/2.jpg" alt="Madiha Ahmed's portrait." />
               <div class="modal-title font-bolder">
                 <h3 class="font-bolder">Madiha Ahmed</h3>
                 Youth Mentor at OpenHearts <br />
@@ -491,7 +491,7 @@
               <button type="button" class="close" data-dismiss="modal">
               &times;
               </button>
-              <img src="img/speakers/3.webp" alt="Aaquib Hussain's portrait." />
+              <img src="img/speakers/3.jpg" alt="Aaquib Hussain's portrait." />
               <div class="modal-title font-bolder">
                 <h3 class="font-bolder">Aaquib Hussain</h3>
                 Co-Founder and Creative Head of <br />I And We
@@ -533,7 +533,7 @@
               <button type="button" class="close" data-dismiss="modal">
               &times;
               </button>
-              <img src="img/speakers/4.webp" alt="Smriti Dewan's portrait." />
+              <img src="img/speakers/4.jpg" alt="Smriti Dewan's portrait." />
               <div class="modal-title font-bolder">
                 <h3 class="font-bolder">Smriti Dewan</h3>
                 Writer, Director and Producer <br />of 101 India
