added winners of quoTED

--- a/index.html
+++ b/index.html
@@ -91,6 +91,34 @@
           <p>Heritage Institute of Technology</p>
         </div>
         <hr class="small-hr" />
+        <div class="container">
+          <p>Thank you all for amazing responses.<br/>
+          We have a Joint winner for the  quoTED competition.
+          We will get in touch with the winners for their pass and T-shirt.</p>
+          <div class="row" style="padding: 20px 0px;">
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+            <img src="img/1.jpeg" alt="quoTED Winner 1" class="img-responsive"  style="width: 120px; height: 120px; border-radius: 50%; margin: 0px auto;"/>
+            <p>
+              <hr/>
+              <i>"Fabricate your intuition, shock the creation."</i> <br/> 
+              <b>Abhishek Kumar</b><br/>
+              Information Technology, 1st Year.
+              <hr/>
+            </p>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
+            <img src="img/2.jpeg" alt="quoTED Winner 2" class="img-responsive"  style="width: 120px; height: 120px; border-radius: 50%; margin: 0px auto;" />
+            <p>
+              <hr/>
+              <i>"Feel the noise, fill the void."</i> <br/> 
+              <b>Shreya Jha</b><br/>
+              Biotechnology, 1st Year.
+              <hr/>
+            </p>
+            </div>
+            <small>Watch out this section for all future announcements.</small>
+          </div>
+        </div>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3685.653208021584!2d88.41667224694913!3d22.517190965137427!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjLCsDMxJzAyLjMiTiA4OMKwMjUnMDcuMyJF!5e0!3m2!1sen!2sin!4v1542473158222"
           width="600"
