--- a/index.html
+++ b/index.html
@@ -97,26 +97,25 @@
           We will get in touch with the winners for their pass and T-shirt.</p>
           <div class="row" style="padding: 20px 0px;">
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-            <img src="img/1.jpeg" alt="quoTED Winner 1" class="img-responsive"  style="width: 120px; height: 120px; border-radius: 50%; margin: 0px auto;"/>
+            <img src="img/1.jpg" alt="quoTED Winner 1" class="img-responsive"  style="width: 120px; height: 120px; border-radius: 50%; margin: 0px auto;"/>
             <p>
-              <hr/>
+              <hr style="margin: 20px 17%;"/>
               <i>"Fabricate your intuition, shock the creation."</i> <br/> 
               <b>Abhishek Kumar</b><br/>
               Information Technology, 1st Year.
-              <hr/>
+              <hr style="margin: 20px 17%;"/>
             </p>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
-            <img src="img/2.jpeg" alt="quoTED Winner 2" class="img-responsive"  style="width: 120px; height: 120px; border-radius: 50%; margin: 0px auto;" />
+            <img src="img/2.jpg" alt="quoTED Winner 2" class="img-responsive"  style="width: 120px; height: 120px; border-radius: 50%; margin: 0px auto;" />
             <p>
-              <hr/>
+              <hr style="margin: 20px 17%;"/>
               <i>"Feel the noise, fill the void."</i> <br/> 
               <b>Shreya Jha</b><br/>
               Biotechnology, 1st Year.
-              <hr/>
+              <hr style="margin: 20px 17%;"/>
             </p>
             </div>
-            <small>Watch out this section for all future announcements.</small>
           </div>
         </div>
         <iframe
