corrected an error in grammar

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <hr class="small-hr" />
         <div class="container">
           <p>Thank you all for amazing responses.<br/>
-          We have a Joint winner for the  quoTED competition.
+          We have joint winners for the  quoTED competition.
           We will get in touch with the winners for their pass and T-shirt.</p>
           <div class="row" style="padding: 20px 0px;">
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
