--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
         <div class="container">
           <p>Thank you all for amazing responses.<br/>
           We have joint winners for the  quoTED competition.
-          We will get in touch with the winners for their pass and T-shirt.</p>
+          We will get in touch with the winners for their pass and T-shirt.<br/>
+          <b>Congratulations!</b>
+        </p>
           <div class="row" style="padding: 20px 0px;">
             <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 text-center">
             <img src="img/1.jpg" alt="quoTED Winner 1" class="img-responsive"  style="width: 120px; height: 120px; border-radius: 50%; margin: 0px auto;"/>
