added 5th and 6th speaker and the winners of t-shirt design comptetion

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
         />
       <div id="countdown-timer">
         <div class="countdown-timer-block">
-          <div id="countdown-timer-days">73</div>
+          <div id="countdown-timer-days">08</div>
           <p class="countdown-description countdown-description-days">DAYS</p>
         </div>
         <div class="countdown-timer-divider"><span>:</span></div>
         <div class="countdown-timer-block">
-          <div id="countdown-timer-hours">14</div>
+          <div id="countdown-timer-hours">20</div>
           <p class="countdown-description">HOURS</p>
         </div>
         <div class="countdown-timer-divider"><span>:</span></div>
@@ -93,7 +93,7 @@
         <hr class="small-hr" />
         <div class="container">
           <p>Thank you all for amazing responses.<br/>
-          We have joint winners for the  quoTED competition.
+          We have joint winners for the  T-Shirt design competition.
           We will get in touch with the winners for their pass and T-shirt.<br/>
           <b>Congratulations!</b>
         </p>
@@ -102,9 +102,8 @@
             <img src="img/1.jpg" alt="quoTED Winner 1" class="img-responsive"  style="width: 120px; height: 120px; border-radius: 50%; margin: 0px auto;"/>
             <p>
               <hr style="margin: 20px 17%;"/>
-              <i>"Fabricate your intuition, shock the creation."</i> <br/> 
-              <b>Abhishek Kumar</b><br/>
-              Information Technology, 1st Year.
+              <b>Ayush Agarwal</b><br/>
+              Computer Science and Engineering, 3rd Year.<br/><br/>
               <hr style="margin: 20px 17%;"/>
             </p>
             </div>
@@ -112,9 +111,8 @@
             <img src="img/2.jpg" alt="quoTED Winner 2" class="img-responsive"  style="width: 120px; height: 120px; border-radius: 50%; margin: 0px auto;" />
             <p>
               <hr style="margin: 20px 17%;"/>
-              <i>"Feel the noise, fill the void."</i> <br/> 
-              <b>Shreya Jha</b><br/>
-              Biotechnology, 1st Year.
+              <b>Jayant Prasad</b><br/>
+              SRM University, Chennai <br/> Information Technology, 3rd Year.
               <hr style="margin: 20px 17%;"/>
             </p>
             </div>
@@ -269,6 +267,50 @@
                   <p>
                     Smriti Dewan is a writer, director, and producer who started her career<br>
                     with Red Chillies Entertainment.
+                  </p>
+                  <hr />
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
+              <div class="card" data-toggle="modal" data-target="#modal-five">
+                <div class="box">
+                  <div class="img">
+                    <img
+                      src="img/speakers/5.jpg"
+                      alt="Smriti Dewan's portrait."
+                      />
+                  </div>
+                  <h2>
+                    Dr. Arup Kumar Chattopadhyay<br /><span
+                      >Technical Advisor <br/>Heatwork             
+                    </span>
+                  </h2>
+                  <hr />
+                  <p>
+                    Dr. Arup is a distinguished Life Member of Unified International Technical Conference 
+                  </p>
+                  <hr />
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 parent-card">
+              <div class="card" data-toggle="modal" data-target="#modal-six">
+                <div class="box">
+                  <div class="img">
+                    <img
+                      src="img/speakers/6.jpg"
+                      alt="Smriti Dewan's portrait."
+                      />
+                  </div>
+                  <h2>
+                    Anindya Chatterjee<br /><span
+                      >The Brand Ambassador of <br/> Kolkata Police<br/><br/>
+                    </span>
+                  </h2>
+                  <hr />
+                  <p>
+                    Anindya Chatterjee is one of the most versatile and talented actors of Bengali movies.
                   </p>
                   <hr />
                 </div>
@@ -580,6 +622,60 @@
           </div>
         </div>
       </div>
+      <div class="modal fade" id="modal-five" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">
+              &times;
+              </button>
+              <img src="img/speakers/5.jpg" alt="Smriti Dewan's portrait." />
+              <div class="modal-title font-bolder">
+                <h3 class="font-bolder">Dr. Arup Kumar Chattopadhyay</h3>
+                Distinguished Life Member of Unified International Technical Conference              
+              </div>
+            </div>
+            <div class="modal-body">
+              <p>
+                Dr. Arup Kumar Chattopadhyay, an M.Tech in Chemical Technology- (Specialization in Ceramic Tech.) & completed his Ph.D. (Tech.) in Kinetics of Dehydration and Rehydration of Aluminum Silicate Systems from Calcutta University in the 70s.<br/><br/>
+                He after spending four decades of his illustrious career in the refractory industry, which also included the yearned position of Managing Director of TRL Krosaki Refractories Ltd(previously TATA Refractories Limited), is presently working as the Managing Director- National Refractories ( Vantage Refractory Technologies).<br/><br/>
+                Not many know, that Dr. Chattopadhyay has been conferred with Distinguished Life Member of Unified International Technical Conference on Refractories (UNITECR)” for his stupendous contribution in the field of refractories.<br/><br/>
+                His unsurmountable experience has been acquired by virtue of working as the Chairman of Indian Refractory Makers Association from 2006 to 2010, President of Indian Ceramic Society from 2013 to 2014 and President of Indian Institute of Ceramics from 2015 to 2016.<br/><br/>
+                Dr. Chattopadhyay is presently illuminating the following honorable positions gracefully.<br/>
+                1: Technical Advisor-Heatwork <br/>
+                2: Chairman - Refractory Sectional Committee MTD-15 of Bureau of Indian Standards (Two consecutive terms)
+                  Member of Governing Body of College of Engg.& Ceramic Tech, Govt.of WB<br/>
+                3: Member of Editorial Board of the journal China Refractories 
+                  Member of the National Advisory Committee of ASIA-PACIFIC Committee of Glass and Allied Industries.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="modal fade" id="modal-six" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">
+              &times;
+              </button>
+              <img src="img/speakers/6.jpg" alt="Smriti Dewan's portrait." />
+              <div class="modal-title font-bolder">
+                <h3 class="font-bolder">Anindya Chatterjee</h3>
+                The Brand Ambassador of Kolkata Police
+              </div>
+            </div>
+            <div class="modal-body">
+              <p>
+                Anindya Chatterjee, one of the most versatile and talented actors of Bengali movies, web series and a well-known face of TV serials for Star Jalsha and Zee Bangla. He completed his schooling from Scottish Church Collegiate School. <br/><br/>
+                He actually hailed from being behind the camera background and acting happened later. He still does a lot of production works. He has been an integral part of super hit movies such as Chotushkone, Ami Ashbo Fire, Asche Abar shobor, Bela Seshe, Bapi Bari Ja and many more. Presently, he is shooting for the movie Belashuru.<br/><br/>
+                He has recovered from being an addict and currently, it's been 11 years that he is clean and sober. Such determination in life is highly applauded.<br/><br/>
+                Anindya Chatterjee is also a public-spirited person and is the brand ambassador of Kolkata Police for the 26th June international day against drug abuse and illicit trafficking and has been doing it for the past 4 years.<br/><br/>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <link
       rel="stylesheet"
@@ -612,7 +708,7 @@
       crossorigin="anonymous"
 
     ></script>
-
+    <script src="js/countdown.js"></script>
     <scrip>
     </scrip>
     <script
@@ -621,8 +717,7 @@
       crossorigin="anonymous"
 
     ></script>
-    <script async defer src="js/countdown.js"></script>
-    <script async defer src="js/script.js"></script>
+    <script src="js/script.js"></script>
     <script src="js/lazyload.js"></script>
     <script>
         $("img").lazyload();
