Changed speaker content.

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                   </div>
                   <h2>
                     Dr. Arup Kumar Chattopadhyay<br /><span
-                      >Technical Advisor <br/>Heatwork             
+                      >MD of National Refractories<br>(Vantage Refractory Technologies)              
                     </span>
                   </h2>
                   <hr />
@@ -305,7 +305,7 @@
                   </div>
                   <h2>
                     Anindya Chatterjee<br /><span
-                      >The Brand Ambassador of <br/> Kolkata Police<br/><br/>
+                      >Actor, Campaigner against<br/>drug, abuse and illicit trafficking<br/><br/>
                     </span>
                   </h2>
                   <hr />
