--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                   </div>
                   <h2>
                     Anindya Chatterjee<br /><span
-                      >Actor, Campaigner against<br/>drug, abuse and illicit trafficking<br/><br/>
+                      >Actor, Campaigner against<br/>drug, abuse and illicit trafficking<br/><br/><br>
                     </span>
                   </h2>
                   <hr />
