added new team member - Dhruv

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                   </div>
                   <h2>
                     Anindya Chatterjee<br /><span
-                      >Actor, Campaigner against<br/>drug, abuse and illicit trafficking<br/><br/><br>
+                      >Actor, Campaigner against<br/>drug abuse and illicit trafficking<br/><br/><br>
                     </span>
                   </h2>
                   <hr />
@@ -662,7 +662,7 @@
               <img src="img/speakers/6.jpg" alt="Smriti Dewan's portrait." />
               <div class="modal-title font-bolder">
                 <h3 class="font-bolder">Anindya Chatterjee</h3>
-                The Brand Ambassador of Kolkata Police
+                Actor, Campaigner against<br/>drug abuse and illicit trafficking
               </div>
             </div>
             <div class="modal-body">
